test: mutex: generate test report for mutex test cases
add negative cases to mutex
modify sanitylib.py to change the format of test report
junit2html modified accordingly

Signed-off-by: Meng xianglin <xianglinx.meng@intel.com>

--- a/tests/kernel/mutex/mutex_api/CMakeLists.txt
+++ b/tests/kernel/mutex/mutex_api/CMakeLists.txt
@@ -4,5 +4,11 @@ cmake_minimum_required(VERSION 3.13.1)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(mutex_api)
 
+if(NOT NEGATIVE_CASE)
 FILE(GLOB app_sources src/*.c)
 target_sources(app PRIVATE ${app_sources})
+
+else(NEGATIVE_CASE)
+	FILE(GLOB negative_src src/negative/*.c)
+	target_sources(app PRIVATE ${negative_src})
+endif(NEGATIVE_CASE)
