--- a/tests/kernel/mutex/mutex_api/testcase.yaml
+++ b/tests/kernel/mutex/mutex_api/testcase.yaml
@@ -1,3 +1,6 @@
 tests:
   kernel.mutex:
     tags: kernel userspace
+  kernel.mutex.negative:
+    tags: kernel userspace
+    extra_args: NEGATIVE_CASE=1
